# plugin

./: .gitignore
nodes/effects/Jitter/: CMakeLists.txt  ImMatJitterEffectNode.cpp
nodes/effects/Lighting/: CMakeLists.txt  ImMatLightingEffectlNode.cpp
nodes/effects/Soul/: CMakeLists.txt  ImMatSoulEffectlNode.cpp
nodes/effects/Star/: CMakeLists.txt  ImMatStarEffectlNode.cpp
nodes/effects/Sway/: CMakeLists.txt  ImMatSwayEffectlNode.cpp
nodes/effects/WaterRipple/: CMakeLists.txt  ImMatWaterRippleEffectNode.cpp
nodes/enhance/denoise/: AIDenoise_data.cpp  AIDenoise_data.h  CMakeLists.txt  Denoise.cpp
nodes/enhance/denoise_iso/: AIDenoiseISO_data.cpp  AIDenoiseISO_data.h  CMakeLists.txt  DenoiseISO.cpp
nodes/enhance/over_exposure/: CMakeLists.txt  OverExposureCorrection.cpp  OverExposure_data.h
nodes/enhance/refocus/: AIReFocus_data.cpp  AIReFocus_data.h  CMakeLists.txt  ReFocus.cpp
nodes/enhance/under_exposure/: CMakeLists.txt  UnderExposureCorrection.cpp  UnderExposure_data.h
nodes/filters/ALM/: CMakeLists.txt  ImMatALMNode.cpp
nodes/filters/AudioAecho/: CMakeLists.txt  ImMatAudioAechoNode.cpp
nodes/filters/AudioEqualizer/: CMakeLists.txt  ImMatAudioEqualizerNode.cpp
nodes/filters/AudioGain/: CMakeLists.txt  ImMatAudioGainNode.cpp
nodes/filters/BarrelDistortion/: CMakeLists.txt  ImMatBarrelDistortionEffectNode.cpp
nodes/filters/Bilateral/: CMakeLists.txt  ImMatBilateralNode.cpp
nodes/filters/Binary/: CMakeLists.txt  ImMatBinaryNode.cpp
nodes/filters/Box/: CMakeLists.txt  ImMatBoxNode.cpp
nodes/filters/Brightness/: CMakeLists.txt  ImMatBrightnessNode.cpp
nodes/filters/CAS/: CMakeLists.txt  ImMatCASNode.cpp
nodes/filters/Canny/: CMakeLists.txt  ImMatCannyNode.cpp
nodes/filters/Chromakey/: CMakeLists.txt  ImMatChromakeyNode.cpp
nodes/filters/ColorBalance/: CMakeLists.txt  ImMatColorBalanceNode.cpp
nodes/filters/ColorCurve/: CMakeLists.txt  ImMatColorCurveNode.cpp
nodes/filters/ColorInvert/: CMakeLists.txt  ImMatColorInvertNode.cpp
nodes/filters/Contrast/: CMakeLists.txt  ImMatContrastNode.cpp
nodes/filters/DFT/: CMakeLists.txt  ImMatDFTNode.cpp
nodes/filters/Deband/: CMakeLists.txt  ImMatDebandNode.cpp
nodes/filters/Deinterlace/: CMakeLists.txt  ImMatDeinterlaceNode.cpp
nodes/filters/Dilation/: CMakeLists.txt  ImMatDilationNode.cpp
nodes/filters/Distortion/: CMakeLists.txt  ImMatDistortionEffectNode.cpp
nodes/filters/Emboss/: CMakeLists.txt  ImMatEmbossNode.cpp
nodes/filters/Erosion/: CMakeLists.txt  ImMatErosionNode.cpp
nodes/filters/Exposure/: CMakeLists.txt  ImMatExposureNode.cpp
nodes/filters/Flip/: CMakeLists.txt  ImMatFlipNode.cpp
nodes/filters/Gamma/: CMakeLists.txt  ImMatGammaNode.cpp
nodes/upscale/AnimeSlower/: AnimeSlower.cpp  AnimeSlower_data.cpp  AnimeSlower_data.h  CMakeLists.txt
(+278 files in other folders)
